adds min viable menu navbar

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,6 +3,7 @@
 
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"/>
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -10,6 +11,32 @@
     </head>
 
 <body>
+
+    <nav class="menu">
+            <ul class="nav navbar-nav">
+                <li>
+                    <a class = "active" href="#about"><span ></span> About</a>
+                </li>
+                <li>
+                    <a href="#experience"><span ></span> Experience</a>
+                </li>
+                <li>
+                    <a href="#education"> Education</a>
+                </li>
+                <li>
+                    <a href="#projects"><span ></span> Projects</a>
+                </li>
+                <li>
+                    <a href="#skills"><span ></span> Skills</a>
+                </li>
+                <li>
+                    <a href="#volunteering"><span ></span> Volunteering</a>
+                </li>
+                <li>
+                    <a href="#contact"><span ></span> Contact</a>
+                </li>
+            </ul>
+    </nav>
 
 <div class="jumbotron">
   <div class="container">
@@ -38,7 +65,7 @@
     </a>
     <a type="button" class="btn btn-lg btn-default" href="https://duckduckgo.com">
         <strong>
-        <span class="glyphicon glyphicon-flash"></span> Download CV
+        Download CV
         </strong>
     </a>
   </div>
@@ -302,7 +329,10 @@ element.insertBefore(para, child);
         <h5>
             Parsed and transcribed 74 birth, probate, and naturalization legal records as 
             part of FamilySearch's web indexing initiative to make historical legal records 
-            searchable online for FamilySearch users. 
+            searchable online for FamilySearch users. There's more information about Web Indexing
+            <a href = "https://www.familysearch.org/indexing/about">
+            on FamilySearch 
+            </a>
         </h5>
     </div>
 </div>
