adds 404 mapping, convex curve logo, model of spring boot's tests

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -38,12 +38,12 @@
             </ul>
     </nav>
 
-<div class="jumbotron">
-  <div class="container">
+<div class="jumbotron" text-align="center">
+    <aside><img src="convex_curve.png" alt=""></aside>
     <a href="/" class="lang-logo">
       <img src="/mypic.png" alt="Zak's Headshot">
     </a>
-    <h1>
+    <h1 id="name">
         <strong>
         Zak Kraehling
         </strong>
@@ -65,10 +65,9 @@
     </a>
     <a type="button" class="btn btn-lg btn-default" href="https://duckduckgo.com">
         <strong>
-        Download CV
+        Download Resume
         </strong>
     </a>
-  </div>
 </div>
 
 <section>
@@ -85,7 +84,7 @@
                 background is in data analytics and economics. I’m also the creator of full-fred, an open source Python API 
                 the Federal Reserve Bank of St. Louis recommends for accessing its databases.
                 </p>
-        </div>
+            </div>
         </div>
     </article>
 </section>
