--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -37,7 +37,7 @@
                     </ul>
                 </div>
 
-            <div class="jumbotron" style="margin-bottom: 0px; width:inherit;display:inline-block;border-top: 1px solid black;padding:0px; overflow:hidden; border-bottom: 1px solid black; margin-left:0px; text-align:center; background-color:#003153; max-width:max-content;">
+            <div class="jumbotron" style="margin-bottom: 0px; width:inherit;display:inline-block; padding:0px; overflow:hidden; border-bottom: 1px solid black; margin-left:0px; text-align:center; background-color:#003153; max-width:max-content;">
                 <img class="jumbotron" id="logo" src="zak_brand2.png" title="7/" alt="branding" style="max-width:50%;background-color:#003153;float:left;">
                 <h1 class="jumbotron" style="font-weight:900;color:white;background-color:#003153;text-align:center;">
                     <strong>Zak Kraehling</strong>
