try to fix jumbotron background for mobile

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -45,7 +45,7 @@
                 <h2 class="jumbotron" style="font-weight:900;color:white;background-color:#003153;text-align:center;">
                     <strong>Software Engineer</strong>
                 </h2>
-                <div class="jumbotron-buttons">
+                <div class="jumbotron-buttons" style="background-color: #003153;">
                     <a type="button" class="btn btn-lg" href="#contact" style="background-color: white;font-weight:900;border: 1px solid black;">
                         <strong style="background-color: white; color: black;text-align: center;">Contact</strong>
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-megaphone-fill" viewBox="0 0 16 16">
