fix about me indentation for mobile

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -90,9 +90,8 @@
                 </div>
 
                 <main>
-                    <div class="row about" id="about" style="margin-bottom: 3em; width: 95%;">
-                    <div class="col-md-4" style="margin-bottom: 1em; margin-top: 3em;">
-                        <h1 class="about" style="font-size:28; color:#003153;">
+                    <div class="container" id="about" style="margin-top: 1em; margin-bottom: 3em; width: 95%;">
+                        <h1 class="about" style="text-align: center; font-size:28; color:#003153;">
                             <strong>
                                 <span style="text-align: center; padding-left: 50px;">
                                     About Me
@@ -103,17 +102,14 @@
                                 </span>
                             </strong>
                         </h1>
-                    </div>
-                    <div class="col-md-8" style="float: middle; margin-top: 3em;">
-                        <p>
+                        <h2 id="about-text" style="text-align: center; font-size: 14px;">
                         I'm a back end software engineer who uses pytest, JUnit, and criterion unit testing frameworks for
                         test-driven development. I use pandas, numpy, sklearn, psycopg2, scrapy, and selenium for data transformation and analysis. 
                         I'm an enthusiast for all things Linux, risk, math and my educational background is in data analytics and economics. 
                         I’m also the creator of full-fred, an open source Python API the Federal Reserve Bank of St. Louis 
                         recommends for accessing its databases. In my free time I like to read and travel. 
-                        </p>
+                        </h2>
                     </div>
-                </div>
 
                 <div class="b-example-divider" style="margin: auto; width: 90%; height: .1rem; background-color: #003153; border: solid rgba(0, 0, 0, .15);">
                 </div>
