fixes jumbotron's logo width for mobile

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -73,8 +73,8 @@
                     </ul>
                 </div>
 
-                <div class="jumbotron" style="margin-bottom: 0px; width:inherit;display:inline-block; padding:0px; overflow:hidden; text-align:center; background-color:#003153; float: center;">
-                    <img id="logo" src="zak_brand2.png" title="7/" alt="branding" style="margin-top: 1em; max-width:50%; background-color:#003153; float:center;">
+                <div class="jumbotron text-center" style="margin-bottom: 0px; width:inherit;display:inline-block; padding:0px; overflow:hidden; text-align:center; background-color:#003153; float: center;">
+                    <img id="logo" src="zak_brand2.png" title="7/" alt="branding" style="margin-top: 1em; max-width:40%; background-color:#003153; float:center;">
                     <h1 style="font-weight:900;color:white;background-color:#003153;text-align:center; float: center;">
                         <strong>Zak Kraehling</strong>
                     </h1>
