revisions for mobile

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -18,7 +18,7 @@
         <div class="wrap" style="float: center;">
             <div class="container justify-content-center" id="home" style="color: black; background-color: white; border-bottom: black;">
                 <div id="menu-primary">
-                    <ul class="nav navbar-nav">
+                    <ul class="nav navbar-nav" style="float: inline-start;">
                         <li>
                             <a class = "active" href="#about"><span ></span>About
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-compass" viewBox="0 0 16 16">
@@ -73,8 +73,8 @@
                     </ul>
                 </div>
 
-                <div class="jumbotron text-center" style="margin-bottom: 0px; width:inherit;display:inline-block; padding:0px; overflow:hidden; text-align:center; background-color:#003153; float: center;">
-                    <img id="logo" src="zak_brand2.png" title="7/" alt="branding" style="margin-top: 1em; max-width:40%; background-color:#003153; float:center;">
+                <div class="jumbotron" style="margin-bottom: 0px; width:inherit;display:inline-block; padding:0px; overflow:hidden; text-align:center; background-color:#003153; float: center;">
+                    <img id="logo" src="zak_brand2.png" title="7/" alt="branding" style="margin-top: 1em; max-width:40%; float:center;">
                     <h1 style="font-weight:900;color:white;background-color:#003153;text-align:center; float: center;">
                         <strong>Zak Kraehling</strong>
                     </h1>
@@ -93,7 +93,8 @@
                     <div class="container" id="about" style="margin-top: 1em; margin-bottom: 3em; width: 95%;">
                         <h1 class="about" style="text-align: center; font-size:28; color:#003153;">
                             <strong>
-                                <span style="text-align: center; padding-left: 50px;">
+                                <!span style="text-align: center; padding-left: 50px;">
+				<span style="text-align: center;">
                                     About Me
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-compass" viewBox="0 0 16 16">
                                         <path d="M8 16.016a7.5 7.5 0 0 0 1.962-14.74A1 1 0 0 0 9 0H7a1 1 0 0 0-.962 1.276A7.5 7.5 0 0 0 8 16.016zm6.5-7.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/>
@@ -235,7 +236,7 @@
                         </a>
                         <a type="button" class="btn btn-lg btn-default" id="languages">R</a>
                         <a type="button" class="btn btn-lg btn-default" id="languages">C</a>
-                        <a target="_blank" rel="noreferrer" rel="noopener" type="button" class="btn btn-lg btn-default" id="languages" href="https://www.hackerrank.com/certificates/2dc0ea7dce16" style="font-weight:900;" alt="java-hackerrank-certificate">
+                        <a target="_blank" rel="noreferrer" rel="noopener" type="button" style="font-weight: 900;" class="btn btn-lg btn-default" id="languages" href="https://www.hackerrank.com/certificates/2dc0ea7dce16" alt="java-hackerrank-certificate">
                             Java
                         </a>
                         <a type="button" class="btn btn-lg btn-default" id="languages">SQL</a>
@@ -268,7 +269,7 @@
                         <h3><span class="volunteering-role">Web Indexer</span></h3>
                         <h4><span class="volunteering-date">May 2021 - Present</span></h4>
                         <h5>
-                            Parsed and transcribed 143 birth, census, probate, and naturalization legal records as 
+                            Parsed and transcribed 195 birth, census, probate, and naturalization legal records as 
                             part of FamilySearch's web indexing initiative to make historical legal records 
                             searchable online for FamilySearch users. 
                             <a target="_blank" rel="noreferrer" rel="noopener" href="https://www.familysearch.org/indexing/about">
