adds jupyter notebook to skills

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -249,6 +249,7 @@
                         <a type="button" class="btn btn-lg btn-default" id="technologies">Ubuntu</a>
                         <a type="button" class="btn btn-lg btn-default" id="technologies">Debian</a>
                         <a type="button" class="btn btn-lg btn-default" id="technologies">Postgres</a>
+                        <a type="button" class="btn btn-lg btn-default" id="technologies">Jupyter Notebook</a>
                 </div>
 
                 <div class="b-example-divider" style="margin: auto; width: 90%; height: .1rem; background-color: #003153; border: solid rgba(0, 0, 0, .15);">
