--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -79,7 +79,7 @@
                         <strong>Zak Kraehling</strong>
                     </h1>
                     <h2 style="font-weight:900; color:white; background-color:#003153; text-align:center;">
-                        <strong>Software Engineer</strong>
+                        <strong>Data Analyst</strong>
                     </h2>
                     <a type="button" class="btn btn-lg" href="#contact" style="margin-bottom: 1em; text-align: center; background-color: white;font-weight:900;border: 1px solid black;">
                         <strong style="background-color: white; color: black;text-align: center;">Contact</strong>
@@ -104,11 +104,12 @@
                             </strong>
                         </h1>
                         <h2 id="about-text" style="text-align: center; font-size: 14px;">
-                        I'm a back end software engineer who uses pytest, JUnit, and criterion unit testing frameworks for
-                        test-driven development. I use pandas, numpy, sklearn, psycopg2, scrapy, and selenium for data transformation and analysis. 
+                        I'm an analytics professional focused on fixed income, data analysis, and data wrangling. 
+			<!I use pandas, numpy, sklearn, psycopg2, scrapy, and selenium for data transformation and analysis. >
+			I have worked with domestic insurance clients as a Client Servicing Analyst with Clearwater Analytics in Boise, ID since December 2021. 
                         I'm an enthusiast for all things Linux, risk, math and my educational background is in data analytics and economics. 
                         I’m also the creator of full-fred, an open source Python API the Federal Reserve Bank of St. Louis 
-                        recommends for accessing its databases. In my free time I like to read and travel. 
+                        recommends for accessing its databases. In my free time I like to read, spend time with friends and family, and stay fit. 
                         </h2>
                     </div>
 
@@ -125,14 +126,28 @@
                                     </svg>
                             </strong>
                         </h1>
+                        <h2>Clearwater Analytics</h2>
+                        <h3><span class="experience-date">December 2021 - Present | Boise, ID</span></h3>
+                        <h4>Client Services Analyst </h4>
+			<h5>
+			<ul>
+				<li>Validated investment data sets against cash flow predictions and third-party custody data.</li>
+				<li> Created standard operating procedures for quarterly investment accounting reporting projects.</li>
+				<li> Reconciled transactions and positions of investment portfolios using data received via third-party providers.</li> 
+				<li>Supported insurance client queries within GAAP accounting, performance, compliance, and risk reports.</li>
+				<li>Integrated alternative investments including limited partnerships into client reporting workflow.</li>
+			<ul>
+			</h5>
                         <h2>The Ohio State University</h2>
-                        <h3><span class="experience-date">July 2018 - July 2019</span></h3>
+                        <h3><span class="experience-date">July 2018 - July 2019 | Columbus, OH</span></h3>
                         <h4>Research Assistant, College of Arts & Sciences Department of Economics</h4>
                         <h5>
-                            Co-authored a research manuscript focused on asymmetry in transfer markets of over 
-                            3,000 NCAA football recruits spanning 14 years. Edited the manuscript and code, and 
-                            shared findings of OLS and probit regression modelling results at the 2019 Eastern 
-                            Economic Association Conference.
+				<ul>
+					<li>Co-authored a research manuscript focused on asymmetry in transfer markets of 
+						over 3,000 NCAA football recruits spanning 14 years. </li>
+					<li>Edited the manuscript and code, and shared findings of OLS and probit 
+						regression modelling results at the 2019 Eastern Economic Association Conference.</li>
+				</ul>
                         </h5>
                     </div>
 
@@ -151,8 +166,8 @@
                             </strong>
                         </h1>
                         <h2 class="heading">Boston University</h2>
-                        <h3><span class="education-date">Sept 2019 - Present (Expected May 2022)</span></h3>
-                        <h4>Master of Science in Applied Data Analytics</h4>
+                        <h3><span class="education-date">Sept 2019 - December 2021</span></h3>
+                        <h4>Master of Science Candidate in Applied Data Analytics</h4>
                         <h2 class="heading">Ohio State University</h2>
                         <h3><span class="education-date">Aug 2016 - May 2019</span></h3>
                         <h4>Bachelor of Arts in Economics</h4>
@@ -231,21 +246,15 @@
                             </strong>
                         </h1>
                         <h2 class="skills" id="languages" style="font-weight:350;"><strong><span>Languages</span></strong></h2>
-                        <a target="_blank" rel="noreferrer" rel="noopener" id="python-skill" type="button" class="btn btn-lg btn-default" id="languages" href="https://www.hackerrank.com/certificates/d23002a87ae8" style="font-weight:900;" alt="python-hackerrank-certificate">
-                            Python
-                        </a>
-                        <a type="button" class="btn btn-lg btn-default" id="languages">R</a>
-                        <a type="button" class="btn btn-lg btn-default" id="languages">C</a>
-                        <a target="_blank" rel="noreferrer" rel="noopener" type="button" style="font-weight: 900;" class="btn btn-lg btn-default" id="languages" href="https://www.hackerrank.com/certificates/2dc0ea7dce16" alt="java-hackerrank-certificate">
-                            Java
-                        </a>
+                        <!a target="_blank" rel="noreferrer" rel="noopener" type="button" style="font-weight: 900;" class="btn btn-lg btn-default" id="languages" href="https://www.hackerrank.com/certificates/2dc0ea7dce16" alt="java-hackerrank-certificate"Java</a>
+                        <a type="button" class="btn btn-lg btn-default" id="languages">Python</a>
                         <a type="button" class="btn btn-lg btn-default" id="languages">SQL</a>
                         <a type="button" class="btn btn-lg btn-default" id="languages">Bash</a>
                         <h2 class="skills" id="technologies" style="font-weight:350;"><strong><span>Technologies</span></strong></h2>
+                        <a type="button" class="btn btn-lg btn-default" id="technologies">Microsoft SQL Server</a>
                         <a type="button" class="btn btn-lg btn-default" id="technologies">Vim</a>
                         <a type="button" class="btn btn-lg btn-default" id="technologies">Git</a>
-                        <a type="button" class="btn btn-lg btn-default" id="technologies">Arch Linux</a>
-                        <a type="button" class="btn btn-lg btn-default" id="technologies">Spring Boot</a>
+                        <a type="button" class="btn btn-lg btn-default" id="technologies">Salesforce</a>
                         <a type="button" class="btn btn-lg btn-default" id="technologies">Ubuntu</a>
                         <a type="button" class="btn btn-lg btn-default" id="technologies">Debian</a>
                         <a type="button" class="btn btn-lg btn-default" id="technologies">Postgres</a>
@@ -337,7 +346,7 @@
                     </a>
                 </h3>
                 <h6 class="footer" href="https://zakkraehling.net" style="margin-top:5em;text-align:center;">
-                    Copyright &copy; 2021 Zachary A. Kraehling. All rights reserved.</h6>
+                    Copyright &copy; 2023 Zachary A. Kraehling. All rights reserved.</h6>
                 </div>
             </footer>
             </div>
